# NostraSQLite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CPackConfig.cmake  NostraSQLiteConfig.cmake  welcome.txt
